--- a/package.json
+++ b/package.json
@@ -3,8 +3,9 @@
 	"version": "0.0.1",
 	"dependencies": {
 		"express": "3.x",
-		"racer": "0.3.x",
-		"racer-db-mongo": "x",
+		"racer": "0.5.x",
+		"livedb-mongo": "x",
+		"racer-browserchannel": "x",
 		"request": "x",
 		"underscore": "x"
 	},
