Simplify and optimize the streaming a bit

--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"request": "x",
 		"underscore": "x",
 		"walk": "x",
-		"q": "x"
+		"q": "x",
+		"mime": "x"
 	},
 	"scripts": {
 		"start": "node server.js"
