Correctly merge season data
Also replaces underscore with lodash because of the merge() function.

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
 		"livedb-mongo": "x",
 		"racer-browserchannel": "x",
 		"request": "x",
-		"underscore": "x",
+		"lodash": "x",
 		"walk": "x",
 		"q": "x",
 		"temp": "x",
